Slides update Deep Learning

--- a/Slides_Remark/Deep_Learning/Adagrad.html
+++ b/Slides_Remark/Deep_Learning/Adagrad.html
@@ -15,7 +15,7 @@ class: middle
 
 Adagrad is a method that attempts to adaptively change the learning rate.
 
-It does so by using a different learning rate per parameter $w_i$.
+It does so by using a different learning rate per parameter $w_i.$
 
 ---
 class: middle
