--- a/Slides_Remark/AD/PIML.html
+++ b/Slides_Remark/AD/PIML.html
@@ -34,9 +34,9 @@ Equality:
 
 $$F = m a$$
 
-$$ \frac{d \rho}{dt} = 0 $$
+$$ \rho(t) = \rho(0) $$
 
-$$ \frac{dE}{dt} = 0 $$
+$$ E(t) = E(0) $$
 
 ---
 class: middle
@@ -59,7 +59,7 @@ class: middle
 
 We may be given some data: $\\{ u(x_i) \\}_i$.
 
-Conventional ML; DNN model $u(x; \theta)$:
+ Conventional ML: DNN model $u(x; \theta)$
 
 $$ \text{Loss} = \sum\_{i=1}^{n\_\text{obs}} \Vert u(x_i; \theta) - u_i \Vert_2^2 $$
 
@@ -77,7 +77,7 @@ Add a penalty term:
 
 $$ \hspace{-8em} \text{Loss} = \sum\_{i=1}^{n\_\text{obs}} (u(x\_i; \theta) - u\_i )^2 $$
 
-$$ \hspace{3em} + \lambda \sum\_{j=1}^{n\_\text{phys}} \Big[ f(x_j) + \nabla ( k \cdot \nabla u(x_j;\theta) ) \Big]^2 $$
+$$ \hspace{3em} + \lambda \; \sum\_{j=1}^{n\_\text{phys}} \Big[ f(x_j) + \nabla ( k \cdot \nabla u(x_j;\theta) ) \Big]^2 $$
 
 ---
 class: middle
@@ -91,7 +91,7 @@ This leads to more robust training and more accurate DNN models.
 ---
 class: middle
 
-The model can easily incorporate data measured at irregular locations ($x$) or even time $t$.
+The model can easily incorporate data measured at irregular locations ($x$) or times ($t$).
 
 ---
 class: middle
@@ -132,7 +132,7 @@ class: middle
 
 Approximate the 2nd order derivative using the finite-difference scheme:
 
-$$ - \frac{d^2 u}{dx^2} \approx \frac{2u\_i - u\_{i+1} - u\_i}{h^2} $$
+$$ - \frac{d^2 u}{dx^2} \approx \frac{2u\_i - u\_{i+1} - u\_{i-1}}{h^2} $$
 
 $u_i$ is an approximation of $u$ at $x_i = ih$. 
 
@@ -143,7 +143,7 @@ class: middle
 
 Then, given $f_i$, solve for $u_i$
 
-$$ \frac{2u\_i - u\_{i+1} - u\_i}{h^2} = f\_i $$
+$$ \frac{2u\_i - u\_{i+1} - u\_{i-1}}{h^2} = f\_i $$
 
 This is a linear system.
 
